--- a/add-on/manifest.json
+++ b/add-on/manifest.json
@@ -15,7 +15,7 @@
     "applications": {
         "gecko": {
             "id": "ipfs-firefox-addon@lidel.org",
-            "strict_min_version": "57.0"
+            "strict_min_version": "59.0"
         }
     },
 
@@ -75,18 +75,33 @@
 	"protocol_handlers": [
 		{
 			"protocol": "web+dweb",
-			"name": "IPFS Add-On: DWEB protocol handler",
-			"uriTemplate": "https://ipfs.io/%s"
+			"name": "IPFS Companion: DWEB Protocol Handler",
+			"uriTemplate": "https://ipfs.io/#redirect/%s"
 		},
 		{
 			"protocol": "web+ipns",
-			"name": "IPFS Add-On: IPNS protocol handler",
-			"uriTemplate": "https://ipfs.io/%s"
+			"name": "IPFS Companion: IPNS Protocol Handler",
+			"uriTemplate": "https://ipfs.io/#redirect/%s"
 		},
 		{
 			"protocol": "web+ipfs",
-			"name": "IPFS Add-On: IPFS protocol handler",
-			"uriTemplate": "https://ipfs.io/%s"
+			"name": "IPFS Companion: IPFS Protocol Handler",
+			"uriTemplate": "https://ipfs.io/#redirect/%s"
+		},
+		{
+			"protocol": "dweb",
+			"name": "IPFS Companion: DWEB Protocol Handler",
+			"uriTemplate": "https://ipfs.io/#redirect/%s"
+		},
+		{
+			"protocol": "ipns",
+			"name": "IPFS Companion: IPNS Protocol Handler",
+			"uriTemplate": "https://ipfs.io/#redirect/%s"
+		},
+		{
+			"protocol": "ipfs",
+			"name": "IPFS Companion: IPFS Protocol Handler",
+			"uriTemplate": "https://ipfs.io/#redirect/%s"
 		}
 	],
 
